--- a/Views/Proveedor/Proveedor.cshtml
+++ b/Views/Proveedor/Proveedor.cshtml
@@ -42,7 +42,7 @@
                                 <tr>
                                     <th>RTN</th>
                                     <th>Nombre proveedor</th>
-                                    <th>Correo electronico</th>
+                                    <th>Correo electrónico</th>
                                     <th>Fecha registro</th>
                                     <th style="width:150px"></th>
                                 </tr>
