--- a/Views/Acceso/login.cshtml
+++ b/Views/Acceso/login.cshtml
@@ -46,7 +46,7 @@
                         </div>
 
                         <div class="form-group">
-                            <button type="submit" name="button" class="btn float-right login_btn">Inciar sesion</button>
+                            <button type="submit" name="button" class="btn float-right login_btn">Iniciar sesión</button>
                         </div>
                     </form>
                 </div>
