--- a/Views/Departamento/Editardept.cshtml
+++ b/Views/Departamento/Editardept.cshtml
@@ -5,63 +5,74 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<div class="row" style="margin-top:30px">
-    <div class="col-sm-12 text-center">
-        <!-- Agregué la clase text-center -->
-        <div class="panel panel-warning" style="display: inline-block;">
-            <!-- Agregué display: inline-block -->
-            <div class="panel-heading">
-                <h4>ACTUALIZAR DEPARTAMENTO</h4><br />
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>
+
+<body>
+
+    <h3 class="text-center mt-3justify ">Actualizar departamento</h3>
+    <br />
+
+    <div class="container mt-3 d-flex justify-content-center col-sm-12">
+        <form action="@Url.Action("Editardept","Departamento")" method="post">
+
+            <div class="center-input">
+                <div class="form-group">
+                    <label>Departamento</label>
+                    <input type="hidden" class="form-control" name="ID_DEPARTAMENTO" value="@Html.DisplayTextFor(m=>m.ID_DEPARTAMENTO)" />
+                    <input type="text" class="form-control" name="DECRIPCION_DEPARTAMENTO" value="@Html.DisplayTextFor(m=>m.DECRIPCION_DEPARTAMENTO)" required />
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                </div>
             </div>
-            <div class="panel-body">
-                <form action="@Url.Action("Editardept","Departamento")" method="post">
-                    <div class="form-group">
-                        <label style="font-weight: bold; font-size: 1.2em;"> Departamento</label>
 
-                        <style>
-                            .center-input {
-                                text-align: center; /* Centra el contenido en línea */
-                                margin-top: 20px; /* Espacio superior opcional */
-                            }
+            @if (ViewData["MENSAJEDEPT"] != null)
+            {
+                <div class="alert alert-danger" role="alert">
+                    @ViewData["MENSAJEDEPT"]
+                </div>
+            }
 
-                                .center-input input {
-                                    display: inline-block; /* Permite centrar el input dentro del contenedor */
-                                }
-                        </style>
+            <style>
+                .center-input {
+                    text-align: left; /* Centra el contenido en línea */
+                    margin-top: 20px; /* Espacio superior opcional */
+                }
 
-                        <div class="form-container">
-                            <div class="center-input">
-                                <input type="hidden" class="form-control" name="ID_DEPARTAMENTO" value="@Html.DisplayTextFor(m=>m.ID_DEPARTAMENTO)" />
-
-                                <input type="text" class="form-control" name="DECRIPCION_DEPARTAMENTO" style="height: 40px; font-size: 16px; background-color: #FFFFCC;" value="@Html.DisplayTextFor(m=>m.DECRIPCION_DEPARTAMENTO)" required /><br />
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            </div>
-                        </div>
-                    </div>
-
-                    @if (ViewData["MENSAJEDEPT"] != null)
-                    {
-                        <div class="alert alert-danger" role="alert">
-                            @ViewData["MENSAJEDEPT"]
-                        </div>
+                    .center-input input {
+                        display: inline-block; /* Permite centrar el input dentro del contenedor */
                     }
+            </style>
 
-                    <button type="submit" class="btn btn-primary ml-4" style="font-size: 20px; color: #FFFFFF;">
-                        <i class="fas fa-sync-alt" aria-hidden="true"></i>
-                    </button>
-                    <a class="btn btn-warning ml-4" href="@Url.Action("Departamento","Departamento")" style="font-size: 20px; color: #FFFFFF;">
-                        <i class="fas fa-arrow-left" aria-hidden="true"></i>
-                    </a>
-
-                </form>
+            <style>
 
 
-            </div>
-        </div>
+                .form-group label {
+                    display: block; /* Asegura que el label ocupe una línea completa */
+                    margin-bottom: 10px; /* Espacio entre el label y el DropDownList */
+                }
+            </style>
 
+            <button type="submit" class="btn btn-primary ml-4" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-sync-alt" aria-hidden="true"> </i>
+            </button>
+            <a class="btn btn-warning ml-4" href="@Url.Action("Departamento","Departamento")" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-arrow-left" aria-hidden="true"> </i>
+            </a>
 
-    </div>
-</div>
+        </form>
+                </div >
+                </body >
+                </html >
 
