--- a/Views/Descargas/Registrardescarga.cshtml
+++ b/Views/Descargas/Registrardescarga.cshtml
@@ -5,55 +5,101 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<div class="row" style="margin-top:25px">
-    <div class="col-sm-12 text-center">
-        <!-- Agregué la clase text-center -->
-        <div class="panel panel-warning" style="display: inline-block;">
-            <!-- Agregué display: inline-block -->
-            <div class="panel-heading">
-                <h4>NUEVA DESCARGAS</h4><br />
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>
+
+<body>
+
+    <h3 class="text-center mt-4 justify">Registrar descarga</h3>
+    <br />
+
+    <div class="container mt-3 d-flex justify-content-center col-sm-12">
+        <form action="@Url.Action("Registrardescarga", "Descargas")" enctype="multipart/form-data" method="post">
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_REGISTRO_SERIE_HERRAMIENTAL"> Numero serie</label><br />
+                    <select class="form-control" name="ID_REGISTRO_SERIE_HERRAMIENTA" id="ID_REGISTRO_SERIE_HERRAMIENTA_S" required>
+                        <option value="">Seleccione una serie</option>
+                        @foreach (var itemz in ViewBag.zSerie)
+                        {
+                            <option value="@itemz.Value">@itemz.Text</option>
+                        }
+                    </select>
+                </div>
             </div>
-            <div class="panel-body">
-                <form action="@Url.Action("Registrardescarga", "Descargas")" enctype="multipart/form-data" method="post">
+            <br />
 
-
-                    <div class="form-group">
-                        <label for="ID_REGISTRO_SERIE_HERRAMIENTA">Numero serie</label>
-                        @Html.DropDownListFor(model => model.ID_REGISTRO_SERIE_HERRAMIENTA, (SelectList)ViewBag.zSerie, new { @class = "form-control" })<br />
-                    </div>
-
-                    <div class="form-group">
-                        <label for="ID_USUARIO_BD">Usuario</label>
-                        @Html.DropDownListFor(model => model.ID_USUARIO_BD, (SelectList)ViewBag.tUsuario, new { @class = "form-control" })<br />
-                    </div>
-
-                    <div class="form-group">
-                        <label>Fecha de desecho</label>
-                        <input type="date" class="form-control" name="FECHA_DESECHO" required style="height: 40px; font-size: 18px; background-color: #FFFFCC;" /><br />
-                    </div>
-
-                    <div class="form-group">
-                        <label>Comentario</label>
-                        <input type="text" class="form-control" name="Comentario" style="height: 40px; font-size: 18px; background-color: #FFFFCC;" /><br />
-                    </div>
-
-                    <div class="form-group">
-                        <label>Foto</label>
-                        <input type="file" class="form-control" id="FOTO" name="upload" /><br />
-                    </div><br>
-
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <button type="submit" class="btn btn-primary ml-2" style="font-size: 20px; color: #FFFFFF;">
-                        <i class="fas fa-check" aria-hidden="true"></i>
-                    </button>
-                    <a class="btn btn-warning ml-2" href="@Url.Action("descargas","Descargas")" style="font-size: 20px; color: #FFFFFF;">
-                        <i class="fas fa-arrow-left" aria-hidden="true"></i>
-                    </a>
-                </form>
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_USUARIO_BD">Usuario</label><br />
+                    <select class="form-control" name="ID_USUARIO_BD" id="ID_USUARIO" required>
+                        <option value="">Seleccione un usuario</option>
+                        @foreach (var iteme in ViewBag.tUsuario)
+                        {
+                            <option value="@iteme.Value">@iteme.Text</option>
+                        }
+                    </select>
+                </div>
             </div>
+            <br />
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Fecha de desecho</label>
+                    <input type="date" class="form-control" name="FECHA_DESECHO" required /><br />
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Comentario</label>
+                    <textarea class="form-control" name="COMENTARIO"></textarea><br />
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Foto</label>
+                    <input type="file" class="form-control" id="FOTO" name="upload" /><br />
+                </div>
+            </div><br>
+
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <button type="submit" class="btn btn-primary ml-2" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-check" aria-hidden="true"></i>
+            </button>
+            <a class="btn btn-warning ml-2" href="@Url.Action("descargas","Descargas")" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-arrow-left" aria-hidden="true"></i>
+            </a>
+        </form>
+
+        @section Scripts{
+
+            <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+            <script type="text/javascript">
+
+                $(document).ready(function () {
+                    $('#ID_REGISTRO_SERIE_HERRAMIENTA_S').select2();
+                    $('#ID_USUARIO').select2();
+                });
+
+            </script>
+        }
         </div>
-    </div>
-</div>
+</body>
+</html>
 
