--- a/Views/Descargas/descargas.cshtml
+++ b/Views/Descargas/descargas.cshtml
@@ -14,6 +14,39 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+    @section styles{
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css">
+        <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.bootstrap5.min.css">
+        @*ESTILOS DE BOTONES*@
+        <link href="https://cdn.datatables.net/buttons/2.2.2/css/buttons.dataTables.min.css" rel="stylesheet" />
+
+        <style>
+
+            thead input {
+                width: 100%;
+                background-color: #FFFFCC !important
+            }
+
+            .btn-exportar-excel {
+                background-color: #198754 !important;
+                color: white !important;
+            }
+
+            .btn-exportar-pdf {
+                background-color: #dc3545 !important;
+                color: white !important;
+            }
+
+            .btn-exportar-print {
+                background-color: #00a7c9 !important;
+                color: white !important;
+            }
+        </style>
+
+
+    }
+
 </head>
 <body>
     <div class="row" style="margin-top:30px">
@@ -28,49 +61,20 @@
                     </a>
                     <hr />
                     <div class="table-responsive">
-                        <table class="table table-striped">
+                        <table class="table table-striped" id="tabled">
                             <thead>
                                 <tr>
-                                    <th>Numero serie</th>
+                                    <th>ID</th>
                                     <th>Usuario</th>
                                     <th>Fecha desecho</th>
-                                    <th>Comentario</th>
+                                    <th>Tipo de harramienta</th>
+                                    <th>Serie</th>
                                     <th>Foto</th>
+                                    <th>Comentario</th>
                                     <th>Fecha registro</th>
-                                    <th style="width:150px"></th>
+                                    <th></th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                @foreach (CONTROL_HERRAMIENTA_SUNCORP.Models.Descargas item in Model)
-                                {
-                                    <tr>
-                                        <td>@item.SERIE.NUMERO_SERIE</td>
-                                        <td>@item.USUARIO_BD.USUARIO</td>
-                                        <td>@item.FECHA_DESECHO</td>
-                                        <td>@item.COMENTARIO</td>
-                                        <td>
-                                            @if (item.FOTO != null)
-                                            {
-                                                <img src="@Url.Action("ConvertirImagen", "Descargas", new { codigo = item.ID_DESECHOS })" alt="Imagen de la descarga" width="200" height="160" />
-                                            }
-                                            else
-                                            {
-                                                <p>No hay imagen</p>
-                                            }
-                                        </td>
-                                        <td>@item.FECHA_REGISTRO</td>
-                                        <td class="text-center">
-                                            <a class="btn btn-primary btn-sm" style="font-size: 15px; padding: 4px 10px; " href="@Url.Action("Editardescargas","Descargas", new { Iddescargas = item.ID_DESECHOS})">
-                                                <i class="fas fa-edit"></i>
-                                            </a>
-                                            <a class="btn btn-danger btn-sm" style="font-size: 15px; padding: 4px 10px;" href="@Url.Action("Eliminardescargas","Descargas", new { Iddescargas= item.ID_DESECHOS})">
-                                                <i class="fas fa-trash-alt"></i>
-                                            </a>
-                                        </td>
-
-                                    </tr>
-                                }
-                            </tbody>
                         </table>
                     </div>
                 </div>
@@ -78,6 +82,143 @@
         </div>
     </div>
 
+    @section Scripts{
+
+        <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+        <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
+        <script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script>
+        <script src="https://cdn.datatables.net/responsive/2.5.0/js/responsive.bootstrap5.min.js"></script>
+        <script src="https://cdn.datatables.net/plug-ins/1.13.7/i18n/es-MX.json"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+
+        @*SCRIPTS DE BOTONES*@
+        <script src="https://cdn.datatables.net/buttons/2.2.2/js/dataTables.buttons.min.js"></script>
+
+        @*excel*@
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+        <script src="https://cdn.datatables.net/buttons/2.2.2/js/buttons.html5.min.js"></script>
+
+        @*pdf*@
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+
+        @*imprimir*@
+        <script src="https://cdn.datatables.net/buttons/2.2.2/js/buttons.print.min.js"></script>
+
+
+        <script>
+
+    $(document).ready(function() {
+
+       var table = new DataTable('#tabled', {
+           order: [[0, 'desc']],
+           responsive: true,
+           rowReorder: true,
+           autoWidth: false,
+           language: {
+               "decimal": ".",
+               "emptyTable": "No hay datos disponibles en la tabla",
+               "zeroRecords": "No se encontraron coincidencias",
+               "info": "Mostrando START a END de TOTAL entradas",
+               "infoFiltered": "(Filtrado de MAX total de entradas)",
+               "lengthMenu": "Mostrar MENU entradas",
+               "search": "Buscar:",
+               "infoEmpty": "No hay datos para mostrar",
+               "paginate": {
+                   "first": "Primero",
+                   "last": "Último",
+                   "next": ">",
+                   "previous": "<"
+               }
+           },
+            ajax: {
+                   "url": "@Url.Action("ListaDescargas", "Descargas")",
+                   "type": "GET",
+                   "datatype": "json"
+           },
+               columns: [
+                   { "data": "ID_DESECHOS" },
+                   { "data": "USUARIO_BD.USUARIO" },
+                   { "data": "FECHA_DESECHO", "render": function (data) { return moment(data).format('YYYY-MM-DD'); } },
+                   { "data": "Tipoherramienta" },
+                   { "data": "SERIE.NUMERO_SERIE" },
+                   { "data": "FOTO" },
+                   { "data": "COMENTARIO" },
+                   { "data": "FECHA_REGISTRO", "render": function (data) { return moment(data).format('YYYY-MM-DD'); } },
+                   {
+                      "data": null,
+                       "className": "text-center",
+                       "render": function (data, type, row) {
+                           var editUrl = '@Url.Action("Editardescargas", "Descargas", new { Iddescargas = "ID" })'
+                                          .replace("ID", row.ID_DESECHOS);
+
+                           var deleteUrl = '@Url.Action("Eliminardescargas", "Descargas", new { Iddescargas = "ID" })'
+                                           .replace("ID", row.ID_DESECHOS);
+
+                           return `<a class="btn btn-primary btn-sm" href="${editUrl}">
+                                       <span class="fas fa-edit"></span>
+                                   </a>
+                                   <a class="btn btn-danger btn-sm" href="${deleteUrl}">
+                                       <span class="fas fa-trash-alt"></span>
+                                   </a>`;
+                       }
+                   }
+               ],
+
+        //______ TERCERO ____
+        columnDefs: [
+            {
+                targets: 0,
+                visible: false
+            }
+        ],
+        //_____ CUARTO ______
+        dom: 'Bfrtip',
+        buttons: [
+            //'excel',
+            {
+                extend: 'excelHtml5',
+                text: 'Exportar Excel',
+                filename: 'Reporte de las descargas',
+                title: '',
+                exportOptions: {
+                    columns: [1, 2, 3, 5, 6]
+                },
+                className: 'btn-exportar-excel',
+            },
+            //'pdf',
+            {
+                extend: 'pdfHtml5',
+                text: 'Exportar PDF',
+                filename: 'Reporte de las descargas',
+                title: '',
+                exportOptions: {
+                    columns: [1, 2, 3, 5, 6]
+                },
+                className: 'btn-exportar-pdf',
+            },
+            //'print'
+            {
+                extend: 'print',
+                title: 'Reporte de las descargas',
+                exportOptions: {
+                    columns: [1, 2, 3, 5, 6]
+                },
+                className: 'btn-exportar-print'
+
+            },
+            //extra
+            'pageLength'
+        ],
+        orderCellsTop: true,
+        fixedHeader: true,
+       });
+    });
+
+        </script>
+
+    }
     <!-- jQuery -->
     <!--   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
     <!-- Bootstrap JavaScript -->
