--- a/Views/Empleado/Registraremple.cshtml
+++ b/Views/Empleado/Registraremple.cshtml
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
@@ -24,7 +24,7 @@
 
 <body>
 
-    <h3 class="text-center mt-4 justify">Registro de empleados</h3>
+    <h3 class="text-center mt-4 justify">Registrar empleado</h3>
     <br />
 
     <div class="container mt-3 d-flex justify-content-center col-sm-12" >
@@ -34,7 +34,7 @@
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label>DNI</label>
-                    <input type="text" class="form-control" name="DNI" required" placeholder="DNI"><br />
+                    <input type="number" class="form-control" name="DNI" required" placeholder="DNI"><br />
                 </div>
             </div>
 
@@ -53,18 +53,18 @@
             <div class="form-row">
                 <div class="form-group col-md-5">
                     <label>Primer apellido</label>
-                    <input type="text" class="form-control" name="PRIMER_APELLIDO" required placeholder="Primer nombre"><br />
+                    <input type="text" class="form-control" name="PRIMER_APELLIDO" required placeholder="Primer apellido"><br />
                 </div>
                 <div class="form-group col-md-5">
                     <label>Segundo apellido</label>
-                    <input type="text" class="form-control" name="SEGUNDO_APELLIDO" placeholder="Segundo nombre"><br />
+                    <input type="text" class="form-control" name="SEGUNDO_APELLIDO" placeholder="Segundo apellido"><br />
                 </div>
             </div>
 
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label for="ID_GENERO">Genero</label><br />
-                    <select id="ID_GENERO" class="form-control" name="ID_GENERO" required>
+                    <select class="form-control" name="ID_GENERO" id="ID_GENERO_G" required>
                         <option value="">Seleccione un genero</option>
                         @foreach (var itemg in ViewBag.Genero)
                         {
@@ -73,6 +73,7 @@
                     </select>
                 </div>
             </div>
+
 
             <div class="form-row">
                 <div class="form-group col-md-12">
@@ -104,7 +105,7 @@
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label for="ID_ROL">Rol</label><br />
-                    <select id="ID_ROL" class="form-control" name="ID_ROL" required>
+                    <select class="form-control" name="ID_ROL" id="ID_ROL_R" required>
                         <option value="">Seleccione un rol</option>
                         @foreach (var itemr in ViewBag.Rol)
                         {
@@ -117,7 +118,7 @@
             <div class="form-row">
                 <div class="form-group col-md-12">
                     <label for="ID_ESTADO_EMPLEADO">Estado</label><br />
-                    <select id="ID_ESTADO_EMPLEADO" class="form-control" name="ID_ESTADO_EMPLEADO" required>
+                    <select class="form-control" name="ID_ESTADO_EMPLEADO" id="ID_ESTADO_E" required>
                         <option value="">Seleccione un estado</option>
                         @foreach (var itemeS in ViewBag.Estado)
                         {
@@ -148,6 +149,10 @@
             $(document).ready(function () {
                 $('#ID_SUCURSAL_P').select2();
                 $('#ID_DEPARTAMENTO_D').select2();
+                $('#ID_GENERO_G').select2();
+                $('#ID_ROL_R').select2();
+                $('#ID_ESTADO_E').select2();
+                
             });
 
         </script>
