--- a/Views/Empleado/empleado.cshtml
+++ b/Views/Empleado/empleado.cshtml
@@ -14,6 +14,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+    @section styles{
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css">
+        <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.bootstrap5.min.css">
+    }
+
 </head>
 <body>
     <div class="row" style="margin-top:30px">
@@ -42,9 +48,10 @@
                     </a>
                     <hr />
                     <div class="table-responsive">
-                        <table class="table table-striped">
+                        <table class="table table-striped" id="table">
                             <thead>
                                 <tr>
+                                    <th>ID</th>
                                     <th>DNI</th>
                                     <th>Primer nombre</th>
                                     <th>Segundo nombre</th>
@@ -57,45 +64,172 @@
                                     <th>Estado empleado</th>
                                     <th>Numero de herramientas</th>
                                     <th>Fecha registro</th>
-                                    <th style="width:150px"></th>
+                                    <th> Opciones</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                @foreach (CONTROL_HERRAMIENTA_SUNCORP.Models.Empleado item in Model)
-                                {
-                                    <tr>
-                                        <td>@item.DNI</td>
-                                        <td>@item.PRIMER_NOMBRE</td>
-                                        <td>@item.SEGUNDO_NOMBRE</td>
-                                        <td>@item.PRIMER_APELLIDO</td>
-                                        <td>@item.SEGUNDO_APELLIDO</td>
-                                        <td>@item.GENERO.DESCRIPCION_GENERO</td>
-                                        <td>@item.SUCURSAL.NOMBRE_SUCURSAL</td>
-                                        <td>@item.DEPARTAMENTO.DECRIPCION_DEPARTAMENTO</td>
-                                        <td>@item.ROL.DECRIPCION_ROL</td>
-                                        <td>@item.ESTADO_EMPLEADO.DESCRIPCION_ESTADO_EMPLEADO</td>
-                                        <td>@item.NUMERO_DE_HERRAMIENTAS</td>
-                                        <td>@item.FECHA_REGISTRO</td>
-                                        <td class="text-center">
-                                            <a class="btn btn-primary btn-sm" href="@Url.Action("Editaremple","Empleado", new { Idempleado = item.ID_EMPLEADO}) ">
-                                                <span class="fas fa-edit font-size: 15px; padding: 4px 10px;"></span>
-                                              </a>
-                                            <a class="btn btn-danger btn-sm"  href="@Url.Action("Eliminaremple","Empleado", new { Idempleado= item.ID_EMPLEADO })">
-                                                <span class="fas fa-trash-alt font-size: 15px; padding: 4px 10px;"></span>
-                                              </a>
-                                        </td>
 
-                                    </tr>
-
-                                }
-
-                            </tbody>
                         </table>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- Modal para mostrar los empleados -->
+    <div class="modal fade" id="empleadosModal" tabindex="-1" role="dialog" aria-labelledby="empleadosModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="empleadosModalLabel">Herramientas de empleados</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="table-responsive">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+
+                                    <th>ID</th>
+                                    <th>N° serie</th>
+                                  
+                                    <th>Herramienta</th>
+                                    <th>Marca</th>
+                                    <th>Modelo</th>
+
+                                </tr>
+                            </thead>
+                            <tbody id="empleadosTableBody">
+                                <!-- Los datos de los empleados se cargarán aquí -->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    @section Scripts{
+
+        <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+        <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
+        <script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script>
+        <script src="https://cdn.datatables.net/responsive/2.5.0/js/responsive.bootstrap5.min.js"></script>
+        <script src="https://cdn.datatables.net/plug-ins/1.13.7/i18n/es-MX.json"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+
+        <script>
+
+
+        new DataTable('#table', {
+            order: [[0, 'desc']],
+            responsive: true,
+            rowReorder: true,
+            autoWidth: false,
+            language: {
+                "decimal": ".",
+                "emptyTable": "No hay datos disponibles en la tabla",
+                "zeroRecords": "No se encontraron coincidencias",
+                "info": "Mostrando START a END de TOTAL entradas",
+                "infoFiltered": "(Filtrado de MAX total de entradas)",
+                "lengthMenu": "Mostrar MENU entradas",
+                "search": "Buscar:",
+                "infoEmpty": "No hay datos para mostrar",
+                "paginate": {
+                    "first": "Primero",
+                    "last": "Último",
+                    "next": ">",
+                    "previous": "<"
+                }
+            },
+             ajax: {
+                    "url": "@Url.Action("ListaEmpleados", "Empleado")",
+                    "type": "GET",
+                    "datatype": "json"
+                },
+                columns: [
+                    { "data": "ID_EMPLEADO" },
+                    { "data": "DNI" },
+                    { "data": "PRIMER_NOMBRE" },
+                    { "data": "SEGUNDO_NOMBRE" },
+                    { "data": "PRIMER_APELLIDO" },
+                    { "data": "SEGUNDO_APELLIDO" },
+                    { "data": "GENERO.DESCRIPCION_GENERO" },
+                    { "data": "SUCURSAL.NOMBRE_SUCURSAL" },
+                    { "data": "DEPARTAMENTO.DECRIPCION_DEPARTAMENTO" },
+                    { "data": "ROL.DECRIPCION_ROL" },
+                    { "data": "ESTADO_EMPLEADO.DESCRIPCION_ESTADO_EMPLEADO" },
+                    { "data": "NUMERO_DE_HERRAMIENTAS" },
+                    { "data": "FECHA_REGISTRO", "render": function (data) { return moment(data).format('YYYY-MM-DD'); } },
+                    {
+                       "data": null,
+                        "className": "text-center",
+                        "render": function (data, type, row) {
+                            var editUrl = '@Url.Action("Editaremple", "Empleado", new { Idempleado = "_ID_" })'
+                                           .replace("_ID_", row.ID_EMPLEADO);
+
+                            var deleteUrl = '@Url.Action("Eliminaremple", "Empleado", new { Idempleado = "_ID_" })'
+                                            .replace("_ID_", row.ID_EMPLEADO);
+
+                            return `<a class="btn btn-primary btn-sm" href="${editUrl}">
+                                        <span class="fas fa-edit"></span>
+                                    </a>
+                                    <a class="btn btn-danger btn-sm" href="${deleteUrl}">
+                                        <span class="fas fa-trash-alt"></span>
+                                    </a>
+                                    <button class="btn btn-success btn-sm" style="font-size: 15px; padding: 4px 10px;"
+                            data-toggle="modal" data-target="#empleadosModal" onclick="loadEmpleados(${row.ID_EMPLEADO})">
+                            <i class="fas fa-tools"></i>
+                        </button>
+
+                                `;
+                        }
+                    }
+                ]
+
+            });
+        </script>
+
+    }
+
+    <script>
+            function loadEmpleados(idSeries) {
+                console.log(idSeries);
+            var infoempleado='@Url.Action("GetSerieHerramientas", "Empleado", new { idEmpleado = "_ID_" })'
+                                .replace("_ID_", idSeries);
+
+      $.ajax({
+        url: infoempleado, // URL con el parámetro idseries
+        type: 'GET',
+        success: function (data) {
+            var empleadosTableBody = $('#empleadosTableBody');
+            empleadosTableBody.empty(); // Limpiar cualquier contenido previo
+
+            data.forEach(function (empleado) {
+                empleadosTableBody.append(`
+                    <tr>
+                        <td>${empleado.IdRegistroSerieHerramienta}</td>
+                        <td>${empleado.NumeroSerie}</td>
+                     
+                        <td>${empleado.Herramienta}</td>
+                        <td>${empleado.Marca}</td>
+                        <td>${empleado.Modelo}</td>
+                    </tr>
+                `);
+            });
+        },
+        error: function () {
+            alert("Error al cargar los empleados.");
+        }
+    });
+}
+    </script>
+
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
