--- a/Views/Empresa/Editar.cshtml
+++ b/Views/Empresa/Editar.cshtml
@@ -13,7 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
@@ -22,8 +23,7 @@
 
 <body>
 
-    <h3 class="text-center mt-4 justify">Actualizar empresa</h3>
-    <br />
+    <h3 class="text-center mt-3 justify">Actualizar empresa</h3>
 
     <div class="container mt-3 d-flex justify-content-center col-sm-12">
         <form action="@Url.Action("Editar","Empresa")" method="post">
@@ -32,32 +32,40 @@
 
             <div class="form-row">
                 <div class="form-group col-md-12">
-                    <label style="font-weight: bold;">RTN</label>
-                    <input type="text" class="form-control" name="RTN" required value="@Html.DisplayTextFor(m=>m.RTN)" /><br />
+                    <label>RTN</label>
+                    <input type="number" class="form-control" name="RTN" required value="@Html.DisplayTextFor(m=>m.RTN)" /><br />
                 </div>
             </div>
 
 
             <div class="form-row">
                 <div class="form-group col-md-12">
-                    <label style="font-weight: bold;">Nombre empresa</label>
+                    <label>Nombre empresa</label>
                     <input type="text" class="form-control" name="NOMBRE_EMPRESA" required value="@Html.DisplayTextFor(m=>m.NOMBRE_EMPRESA)" /><br />
                 </div>
             </div>
 
             <div class="form-row">
                 <div class="form-group col-md-12">
-
-                    <label style="font-weight: bold;">Correo electronico</label>
-                    <input type="text" class="form-control" name="CORREO_ELECTRONICO" required value="@Html.DisplayTextFor(m=>m.CORREO_ELECTRONICO)" /><br />
+                    <label>Correo electrónico</label>
+                    <input type="email" class="form-control" name="CORREO_ELECTRONICO" required value="@Html.DisplayTextFor(m=>m.CORREO_ELECTRONICO)" /><br />
                 </div>
             </div>
 
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_CORPORACION">Corporacion</label><br />
+                    <select class="form-control" name="ID_CORPORACION" id="ID_CORPORACION" required>
+                        <option value="">Seleccione la corporacion</option>
+                        @foreach (var itemg in ViewBag.Corporacione)
+                        {
+                            <option value="@itemg.Value" @(itemg.Value.Equals(Model.ID_CORPORACION.ToString()) ? "selected" : "")>@itemg.Text</option>
 
-            <div class="form-group">
-                <label style="font-weight: bold;" for="ID_CORPORACION">Corporacion</label>
-                @Html.DropDownListFor(model => model.ID_CORPORACION, (SelectList)ViewBag.Corporaciones, new { @class = "form-control" })<br />
+                        }
+                    </select>
+                </div>
             </div>
+            <br />
 
             <button type="submit" class="btn btn-primary ml-4" style="font-size: 20px; color: #FFFFFF;">
                 <i class="fas fa-sync-alt" aria-hidden="true"></i>
@@ -68,7 +76,20 @@
         </form>
     </div>
 
- 
+    @section Scripts{
+
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+        <script type="text/javascript">
+
+           $(document).ready(function () {
+               $('#ID_CORPORACION').select2();
+
+           });
+
+        </script>
+    }
+
 </body>
 </html >
 
