--- a/Views/Empresa/Registrar.cshtml
+++ b/Views/Empresa/Registrar.cshtml
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
@@ -23,37 +23,37 @@
 
 <body>
 
-    <h3 class="text-center mt-4 justify">Registro de empresa</h3>
+    <h3 class="text-center mt-3 justify">Registrar empresa</h3>
     <br />
 
     <div class="container mt-3 d-flex justify-content-center col-sm-12">
         <form action="@Url.Action("Registrar","Empresa")" method="post">
 
             <div class="form-row">
-                <div class="form-group col-md-5">
-                    <label style="font-weight: bold;">RTN</label>
-                    <input type="text" class="form-control" name="RTN" required /><br />
-                </div>
-            </div>
-
-            <div class="form-row">
-                <div class="form-group col-md-5">
-                    <label style="font-weight: bold;">Nombre empresa</label>
-                    <input type="text" class="form-control" name="NOMBRE_EMPRESA" required /><br />
-                </div>
-            </div>
-
-            <div class="form-row">
-                <div class="form-group col-md-5">
-                    <label style="font-weight: bold;">Correo electronico</label>
-                    <input type="text" class="form-control" name="CORREO_ELECTRONICO" required /><br />
+                <div class="form-group col-md-12">
+                    <label>RTN</label>
+                    <input type="number" class="form-control" name="RTN" required /><br />
                 </div>
             </div>
 
             <div class="form-row">
                 <div class="form-group col-md-12">
-                    <label for="ID_CORPORACION">Corporacion</label><br />
-                    <select id="ID_CORPORACION" class="form-control" name="ID_CORPORACION" required>
+                    <label>Nombre empresa</label>
+                    <input type="text" class="form-control" name="NOMBRE_EMPRESA" required /><br />
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Correo electrónico</label>
+                    <input type="email" class="form-control" name="CORREO_ELECTRONICO" required /><br />
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_CORPORACION">Corporación</label><br />
+                    <select class="form-control" name="ID_CORPORACION" id="ID_CORPORACION" required>
                         <option value="">Seleccione una corporacion</option>
                         @foreach (var itemec in ViewBag.Corporaciones)
                         {
@@ -70,9 +70,21 @@
                 <i class="fas fa-arrow-left" aria-hidden="true"></i>
             </a>
 
-
         </form>
     </div>
+    @section Scripts{
+
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+        <script type="text/javascript">
+
+          $(document).ready(function () {
+              $('#ID_CORPORACION').select2();
+
+          });
+
+        </script>
+    }
 </body>
 </html>
 
