--- a/Views/Empresa/empresa.cshtml
+++ b/Views/Empresa/empresa.cshtml
@@ -41,9 +41,9 @@
                                 <tr>
                                     <th>RTN</th>
                                     <th>Nombre empresa</th>
-                                    <th>Correo electronico</th>
+                                    <th>Correo electrónico</th>
                                     <th>Corporacion</th>
-                                    <th>Cantidad de sucursales</th>
+                                   
                                     <th>Fecha registro</th>
                                     <th style="width:150px"></th>
                                 </tr>
@@ -56,7 +56,7 @@
                                         <td>@item.NOMBRE_EMPRESA</td>
                                         <td>@item.CORREO_ELECTRONICO</td>
                                         <td>@item.CORPORACION.NOMBRE_CORPORACION</td>
-                                        <td>@item.CANTIDAD_DE_SUCURSALES</td>
+                                       
                                         <td>@item.FECHA_REGISTRO</td>
                                         <td class="text-center">
                                             <a class="btn btn-primary btn-sm" style="font-size: 15px; padding: 4px 10px; "  href="@Url.Action("Editar","Empresa", new { Idempresa = item.ID_EMPRESA})">
