--- a/Views/Factura/Registrarfactura.cshtml
+++ b/Views/Factura/Registrarfactura.cshtml
@@ -5,53 +5,120 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:25px">
-    <div class="col-sm-12 text-center">
-        <!-- Agregué la clase text-center -->
-        <div class="panel panel-warning" style="display: inline-block;">
-            <!-- Agregué display: inline-block -->
-            <div class="panel-heading">
-                <h4>NUEVA FACTURA</h4><br />
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>
+
+<body>
+
+    <h3 class="text-center mt-4 justify">Registrar factura</h3>
+    <br />
+
+    <div class="container mt-3 d-flex justify-content-center col-sm-12">
+        <form action="@Url.Action("Registrarfactura", "Factura")" enctype="multipart/form-data" method="post">
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Numero factura</label>
+                    <input type="text" class="form-control" name="Numero_factura" required /><br />
+                </div>
             </div>
-            <div class="panel-body">
-                <form action="@Url.Action("Registrarfactura", "Factura")" enctype="multipart/form-data" method="post">
 
-                    <div class="form-group">
-                        <label style="font-weight: bold;">Numero factura</label>
-                        <input type="text" class="form-control" name="Numero_factura" required /><br />
-                    </div>
 
-                    <div class="form-group">
-                        <label style="font-weight: bold;" for="ID_USUARIO_BD">Usuario</label>
-                        @Html.DropDownListFor(model => model.ID_USUARIO_BD, (SelectList)ViewBag.aUsuario, new { @class = "form-control" })<br />
-                    </div>
-
-                    <div class="form-group">
-                        <label style="font-weight: bold;">Fecha de Compra</label>
-                        <input type="date" class="form-control" name="Fecha_compra" required/><br />
-                    </div>
-
-                    <div class="form-group">
-                        <label style="font-weight: bold;" for="ID_MARCA">Proveedor</label>
-                        @Html.DropDownListFor(model => model.ID_PROVEEDOR, (SelectList)ViewBag.iProveedor, new { @class = "form-control" })<br />
-                    </div>
-
-                    <div class="form-group">
-                        <label style="font-weight: bold;">Comentario</label>
-                        <input type="text" class="form-control" name="Comentario" /><br />
-                    </div>
-
-                    <div class="form-group">
-                        <label style="font-weight: bold;">Foto</label>
-                        <input type="file" class="form-control" id="FOTO" name="upload" /><br />
-                    </div><br>
-
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <button type="submit" class="btn btn-primary">Registrar</button>
-                    <a class="btn btn-warning" href="@Url.Action("FACTURA","Factura")">Volver</a>
-
-                </form>
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_USUARIO_BD">Usuario</label><br />
+                    <select  class="form-control" name="ID_USUARIO_BD" id="ID_USUARIO_BD" required>
+                        <option value="">Seleccione un usuario</option>
+                        @foreach (var iteme in ViewBag.aUsuario)
+                        {
+                            <option value="@iteme.Value">@iteme.Text</option>
+                        }
+                    </select>
+                </div>
             </div>
-        </div>
+            <br />
+
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Fecha de Compra</label>
+                    <input type="date" class="form-control" name="Fecha_compra" required /><br />
+                </div>
+            </div>
+
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_PROVEEDOR">Proveedor</label><br />
+                    <select  class="form-control" name="ID_PROVEEDOR" id="ID_PROVEEDOR" required>
+                        <option value="">Seleccione un proveedor</option>
+                        @foreach (var itemef in ViewBag.iProveedor)
+                        {
+                            <option value="@itemef.Value">@itemef.Text</option>
+                        }
+                    </select>
+                </div>
+            </div>
+            <br />
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Comentario</label>
+                    <textarea type="text" class="form-control" rows="5" name="Comentario"></textarea><br />
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Foto</label>
+                    <input type="file" class="form-control" id="FOTO" name="upload" /><br />
+                </div>
+            </div>
+            <br>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Monto total</label>
+                    <input type="number" class="form-control" name="MONTO_TOTAL" required /><br />
+                </div>
+            </div>
+
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <button type="submit" class="btn btn-primary ml-2" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-check" aria-hidden="true"></i>
+            </button>
+            <a class="btn btn-warning ml-2" href="@Url.Action("FACTURA","Factura")" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-arrow-left" aria-hidden="true"></i>
+            </a>
+        </form>
+
     </div>
-</div>
+    @section Scripts{
+
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+        <script type="text/javascript">
+
+        $(document).ready(function () {
+            $('#ID_USUARIO_BD').select2();
+            $('#ID_PROVEEDOR').select2();
+            
+
+        });
+
+        </script>
+    }
+</body>
+</html>
