--- a/Views/Herramienta/Editarherramienta.cshtml
+++ b/Views/Herramienta/Editarherramienta.cshtml
@@ -5,63 +5,121 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<div class="row" style="margin-top:30px">
-    <div class="col-sm-12 text-center">
-        <!-- Agregué la clase text-center -->
-        <div class="panel panel-warning" style="display: inline-block;">
-            <!-- Agregué display: inline-block -->
-            <div class="panel-heading">
-                <h4>EDITAR HERRAMIENTA</h4><br />
-            </div>
-            <div class="panel-body">
-                <form action="@Url.Action("Editarherramienta","Herramienta")" method="post">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 
-                    <input type="hidden" class="form-control" name="ID_HERRAMIENTA" value="@Html.DisplayTextFor(m=>m.ID_HERRAMIENTA)" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
-                    <div class="form-group">
-                        <label style="font-weight: bold; float: left;" for="ID_TIPO_HERRAMIENTA">Tipo herramienta</label>
-                        @Html.DropDownListFor(model => model.ID_TIPO_HERRAMIENTA, (SelectList)ViewBag.Tipo, new { @class = "form-control" })<br />
-                    </div>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>
 
-                    <div class="form-group">
-                        <label style="font-weight: bold; float: left;" for="ID_MARCA">Marca</label>
-                        @Html.DropDownListFor(model => model.ID_MARCA, (SelectList)ViewBag.Marca, new { @class = "form-control" })<br />
-                    </div>
+<body>
 
-                    <div class="form-group">
-                        <label style="font-weight: bold; float: left;">Modelo</label>
-                        <input type="text" class="form-control" name="MODELO" required style="height: 40px; font-size: 16px; background-color: #FFFFCC;" value="@Html.DisplayTextFor(m=>m.MODELO)" /><br />
-                    </div>
+    <h3 class="text-center mt-3 justify">Actualizar herramienta</h3>
 
-                    <div class="form-group">
-                        <label style="font-weight: bold; float: left;">Comentario</label>
-                        <input type="text" class="form-control" name="COMENTARIO" style="height: 40px; font-size: 16px; background-color: #FFFFCC;" value="@Html.DisplayTextFor(m=>m.COMENTARIO)" /><br />
-                    </div>
+    <div class="container mt-3 d-flex justify-content-center col-sm-12">
+        <form action="@Url.Action("Editarherramienta","Herramienta")" method="post">
 
-                    <style>
-                        .center-input {
-                            text-align: center; /* Centra el contenido en línea */
-                            margin-top: 20px; /* Espacio superior opcional */
+            <input type="hidden" class="form-control" name="ID_HERRAMIENTA" value="@Html.DisplayTextFor(m=>m.ID_HERRAMIENTA)" />
+
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_TIPO_HERRAMIENTAL">Tipo herramienta</label><br />
+                    <select class="form-control" name="ID_TIPO_HERRAMIENTA" id="ID_TIPO_HERRAMIENTA_T" required>
+                        <option value="">Seleccione un tipo de herramienta</option>
+                        @foreach (var items in ViewBag.Tipo)
+                        {
+                            <option value="@items.Value" @(items.Value.Equals(Model.ID_TIPO_HERRAMIENTA.ToString()) ? "selected" : "")>@items.Text</option>
+
                         }
-
-                            .center-input input {
-                                display: inline-block; /* Permite centrar el input dentro del contenedor */
-                            }
-                    </style>
-
-                    <button type="submit" class="btn btn-primary ml-4" style="font-size: 20px; color: #FFFFFF;">
-                        <i class="fas fa-sync-alt" aria-hidden="true"></i>
-                    </button>
-                    <a class="btn btn-warning ml-4" href="@Url.Action("Herramienta","Herramienta")" style="font-size: 20px; color: #FFFFFF;">
-                        <i class="fas fa-arrow-left" aria-hidden="true"></i>
-                    </a>
-
-
-                </form>
+                    </select>
+                </div>
             </div>
-        </div>
+            <br />
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_MARCA">Marca</label><br />
+                    <select class="form-control" name="ID_MARCA" id="ID_MARCA_M" required>
+                        <option value="">Seleccione una marca</option>
+                        @foreach (var itemm in ViewBag.Marca)
+                        {
+                            <option value="@itemm.Value" @(itemm.Value.Equals(Model.ID_MARCA.ToString()) ? "selected" : "")>@itemm.Text</option>
+
+                        }
+                    </select>
+                </div>
+            </div>
+            <br />
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Modelo</label>
+                    <input type="text" class="form-control" name="MODELO" required value="@Html.DisplayTextFor(m=>m.MODELO)" /><br />
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Comentario</label>
+                    <textarea class="form-control" rows="5" name="COMENTARIO" value="@Html.DisplayTextFor(m=>m.COMENTARIO)"></textarea><br />
+                </div>
+            </div>
+
+            <style>
+                .center-input {
+                    text-align: left; /* Centra el contenido en línea */
+                    margin-top: 20px; /* Espacio superior opcional */
+                }
+
+                    .center-input input {
+                        display: inline-block; /* Permite centrar el input dentro del contenedor */
+                    }
+            </style>
+
+            <style>
+
+
+                .form-group label {
+                    display: block; /* Asegura que el label ocupe una línea completa */
+                    margin-bottom: 10px; /* Espacio entre el label y el DropDownList */
+                }
+            </style>
+
+            <button type="submit" class="btn btn-primary ml-4" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-sync-alt" aria-hidden="true"></i>
+            </button>
+            <a class="btn btn-warning ml-4" href="@Url.Action("Herramienta","Herramienta")" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-arrow-left" aria-hidden="true"></i>
+            </a>
+
+
+        </form>
     </div>
-</div>
+
+    @section Scripts{
+
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+        <script type="text/javascript">
+
+            $(document).ready(function () {
+                $('#ID_TIPO_HERRAMIENTA_T').select2();
+                $('#ID_MARCA_M').select2();
+
+
+            });
+
+        </script>
+    }
+</body>
+</html>
 
