--- a/Views/Herramienta/Herramienta.cshtml
+++ b/Views/Herramienta/Herramienta.cshtml
@@ -14,6 +14,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+    @section styles{
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css">
+        <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.bootstrap5.min.css">
+    }
+
 </head>
 <body>
     <div class="row" style="margin-top:30px">
@@ -40,52 +46,100 @@
 
                 <div class="card-body">
                     <a class="btn btn-success" style="font-size: 20px; padding: 6px 16px;" href="@Url.Action("Registrarherramienta", "Herramienta")">
-                        <i class="fas fa-plus-circle"></i> 
+                        <i class="fas fa-plus-circle"></i>
                     </a>
                     <hr />
                     <div class="table-responsive">
-                        <table class="table table-striped">
+                        <table class="table table-striped" id="tableh">
                             <thead>
                                 <tr>
+                                    <th>ID</th>
                                     <th>Tipo herramienta</th>
                                     <th>Marca</th>
                                     <th>Modelo</th>
                                     <th>Comentario</th>
                                     <th>Fecha registro</th>
-                                    <th style="width:150px"></th>
+                                    <th></th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                @foreach (CONTROL_HERRAMIENTA_SUNCORP.Models.Herramienta item in Model)
-                                {
-                                    <tr>
-                                        <td>@item.TIPO.DECRIPCION_TIPO_HERRAMIENTA</td>
-                                        <td>@item.MARCA.DECRIPCION_MARCA</td>
-                                        <td>@item.MODELO</td>
-                                        <td>@item.COMENTARIO</td>
-                                        <td>@item.FECHA_REGISTRO</td>
 
-                                        <td class="text-center">
-                                            <a class="btn btn-primary btn-sm" style="font-size: 15px; padding: 4px 10px; " href="@Url.Action("Editarherramienta","Herramienta", new { Idherramienta = item.ID_HERRAMIENTA})">
-                                                <i class="fas fa-edit"></i>
-                                            </a>
-                                            <a class="btn btn-danger btn-sm" style="font-size: 15px; padding: 4px 10px;" href="@Url.Action("Eliminarherramienta","Herramienta", new { Idherramienta= item.ID_HERRAMIENTA })">
-                                                <i class="fas fa-trash-alt"></i>
-                                            </a>
-                                            <td>
-                                        </td>
-
-                                    </tr>
-
-                                }
-
-                            </tbody>
                         </table>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    @section Scripts{
+
+        <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+        <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
+        <script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script>
+        <script src="https://cdn.datatables.net/responsive/2.5.0/js/responsive.bootstrap5.min.js"></script>
+        <script src="https://cdn.datatables.net/plug-ins/1.13.7/i18n/es-MX.json"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+
+        <script>
+
+
+    new DataTable('#tableh', {
+        order: [[0, 'desc']],
+        responsive: true,
+        rowReorder: true,
+        autoWidth: false,
+        language: {
+            "decimal": ".",
+            "emptyTable": "No hay datos disponibles en la tabla",
+            "zeroRecords": "No se encontraron coincidencias",
+            "info": "Mostrando START a END de TOTAL entradas",
+            "infoFiltered": "(Filtrado de MAX total de entradas)",
+            "lengthMenu": "Mostrar MENU entradas",
+            "search": "Buscar:",
+            "infoEmpty": "No hay datos para mostrar",
+            "paginate": {
+                "first": "Primero",
+                "last": "Último",
+                "next": ">",
+                "previous": "<"
+            }
+        },
+         ajax: {
+                "url": "@Url.Action("ListaHerramienta", "Herramienta")",
+                "type": "GET",
+                "datatype": "json"
+        },
+            columns: [
+                { "data": "ID_HERRAMIENTA" },
+                { "data": "TIPO.DECRIPCION_TIPO_HERRAMIENTA" },
+                { "data": "MARCA.DECRIPCION_MARCA" },
+                { "data": "MODELO" },
+                { "data": "COMENTARIO" },
+                { "data": "FECHA_REGISTRO", "render": function (data) { return moment(data).format('YYYY-MM-DD'); } },
+                {
+                   "data": null,
+                    "className": "text-center",
+                    "render": function (data, type, row) {
+                        var editUrl = '@Url.Action("Editarherramienta", "Herramienta", new { Idherramienta = "_ID_" })'
+                                       .replace("_ID_", row.ID_HERRAMIENTA);
+
+                        var deleteUrl = '@Url.Action("Eliminarherramienta", "Herramienta", new { Idherramienta = "_ID_" })'
+                                        .replace("_ID_", row.ID_HERRAMIENTA);
+
+                        return `<a class="btn btn-primary btn-sm" href="${editUrl}">
+                                    <span class="fas fa-edit"></span>
+                                </a>
+                                <a class="btn btn-danger btn-sm" href="${deleteUrl}">
+                                    <span class="fas fa-trash-alt"></span>
+                                </a>`;
+                    }
+                }
+            ]
+
+        });
+        </script>
+    }
+
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
