--- a/Views/Herramienta/Registrarherramienta.cshtml
+++ b/Views/Herramienta/Registrarherramienta.cshtml
@@ -7,60 +7,95 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
-<div class="row" style="margin-top:30px">
-    <div class="col-sm-12 text-center">
-        <!-- Agregué la clase text-center -->
-        <div class="panel panel-warning" style="display: inline-block;">
-            <!-- Agregué display: inline-block -->
-            <div class="panel-heading">
-                <h4>NUEVA HERRAMIENTA</h4><br />
-            </div>
-            <div class="panel-body">
-                <form action="@Url.Action("Registrarherramienta","Herramienta")" method="post">
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>
+
+<body>
+
+    <h3 class="text-center mt-3 justify">Registrar herramienta</h3>
+
+    <div class="container mt-3 d-flex justify-content-center col-sm-12">
+        <form action="@Url.Action("Registrarherramienta","Herramienta")" method="post">
 
 
-                    <div class="form-group">
-                        <label style="font-weight: bold; float: left;" for="ID_TIPO_HERRAMIENTA">Tipo herramienta</label>
-                        @Html.DropDownListFor(model => model.ID_TIPO_HERRAMIENTA, (SelectList)ViewBag.Tipo, new { @class = "form-control" })<br />
-                    </div>
-
-                    <div class="form-group">
-                        <label style="font-weight: bold; float: left;" for="ID_MARCA">Marca</label>
-                        @Html.DropDownListFor(model => model.ID_MARCA, (SelectList)ViewBag.Marca, new { @class = "form-control" })<br />
-                    </div>
-
-
-                    <div class="form-group">
-                        <label style="font-weight: bold; float: left;">Modelo</label>
-                        <input type="text" class="form-control" name="Modelo" required style="height: 40px; font-size: 18px; background-color: #FFFFCC;" /><br />
-                    </div>
-
-                    <div class="form-group">
-                        <label style="font-weight: bold; float: left;">Comentario</label>
-                        <input type="text" class="form-control" name="Comentario" style="height: 40px; font-size: 18px; background-color: #FFFFCC;" /><br />
-                    </div>
-
-                    <style>
-                        .center-input {
-                            text-align: center; /* Centra el contenido en línea */
-                            margin-top: 20px; /* Espacio superior opcional */
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_TIPO_HERRAMIENTA">Tipo herramienta</label><br />
+                    <select class="form-control" name="ID_TIPO_HERRAMIENTA" id="ID_TIPO_HERRAMIENTA_s" required>
+                        <option value="">Seleccione un tipo de herramienta</option>
+                        @foreach (var itemt in ViewBag.Tipo)
+                        {
+                            <option value="@itemt.Value">@itemt.Text</option>
                         }
-
-                            .center-input input {
-                                display: inline-block; /* Permite centrar el input dentro del contenedor */
-                            }
-                    </style>
-
-                    <button type="submit" class="btn btn-primary ml-2" style="font-size: 20px; color: #FFFFFF;">
-                        <i class="fas fa-check" aria-hidden="true"></i>
-                    </button>
-                    <a class="btn btn-warning ml-2" href="@Url.Action("Herramienta","Herramienta")" style="font-size: 20px; color: #FFFFFF;">
-                        <i class="fas fa-arrow-left" aria-hidden="true"></i>
-                    </a>
-
-                </form>
+                    </select>
+                </div>
             </div>
-        </div>
+            <br />
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_MARCA">Marca</label><br />
+                    <select class="form-control" name="ID_MARCA" id="ID_MARCA_M" required>
+                        <option value="">Seleccione una marca</option>
+                        @foreach (var itemM in ViewBag.Marca)
+                        {
+                            <option value="@itemM.Value">@itemM.Text</option>
+                        }
+                    </select>
+                </div>
+            </div>
+            <br />
+
+  
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Modelo</label>
+                    <input type="text" class="form-control" name="Modelo" required /><br />
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Comentario</label>
+                    <textarea type="text" class="form-control" name="Comentario"></textarea><br />
+                </div>
+            </div>
+
+            <button type="submit" class="btn btn-primary ml-2" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-check" aria-hidden="true"></i>
+            </button>
+            <a class="btn btn-warning ml-2" href="@Url.Action("Herramienta","Herramienta")" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-arrow-left" aria-hidden="true"></i>
+            </a>
+
+        </form>
     </div>
-</div>
+
+    @section Scripts{
+
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+        <script type="text/javascript">
+
+            $(document).ready(function () {
+                $('#ID_TIPO_HERRAMIENTA_s').select2();
+                $('#ID_MARCA_M').select2();
+            });
+
+        </script>
+    }
+</body>
+</html>
 
