--- a/Views/Marca/Editarmarca.cshtml
+++ b/Views/Marca/Editarmarca.cshtml
@@ -5,44 +5,78 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:30px">
-    <div class="col-sm-12 text-center">
-        <!-- Agregué la clase text-center -->
-        <div class="panel panel-warning" style="display: inline-block;">
-            <!-- Agregué display: inline-block -->
-            <div class="panel-heading">
-                <h4>ACTUALIZAR MARCA</h4>
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>
+
+<body>
+
+    <h3 class="text-center mt-3 justify">Actualizar marca</h3>
+
+    <div class="container mt-3 d-flex justify-content-center col-sm-12">
+        <form action="@Url.Action("Editarmarca","Marca")" method="post">
+
+            <div class="center-input">
+                <div class="form-group">
+                    <label>Marca</label>
+                    <input type="hidden" class="form-control" name="ID_MARCA" value="@Html.DisplayTextFor(m=>m.ID_MARCA)" />
+                    <input type="text" class="form-control" name="DECRIPCION_MARCA" value="@Html.DisplayTextFor(m=>m.DECRIPCION_MARCA)" required />
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                </div>
             </div>
-            <div class="panel-body">
-                <form action="@Url.Action("Editarmarca","Marca")" method="post">
-                    <div class="form-group">
-                        <label style="font-weight: bold;">Marca</label><br />
 
-                        <input type="hidden" class="form-control" name="ID_MARCA" value="@Html.DisplayTextFor(m=>m.ID_MARCA)" />
 
-                        <input type="text" class="form-control" name="DECRIPCION_MARCA" value="@Html.DisplayTextFor(m=>m.DECRIPCION_MARCA)" required />
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    </div>
+            <style>
+                .center-input {
+                    text-align: left; /* Centra el contenido en línea */
+                    margin-top: 20px; /* Espacio superior opcional */
+                }
 
-                    @if (ViewData["MENSAJEMARCA"] != null)
-                    {
-                        <div class="alert alert-danger" role="alert">
-                            @ViewData["MENSAJEMARCA"]
-                        </div>
+                    .center-input input {
+                        display: inline-block; /* Permite centrar el input dentro del contenedor */
                     }
+            </style>
 
-                    <button type="submit" class="btn btn-primary">Actualizar</button>
-                    <a class="btn btn-warning" href="@Url.Action("Marca","Marca")">Volver</a>
-
-
-
-                </form>
+            <style>
 
 
-            </div>
-        </div>
+                .form-group label {
+                    display: block; /* Asegura que el label ocupe una línea completa */
+                    margin-bottom: 10px; /* Espacio entre el label y el DropDownList */
+                }
+            </style>
+
+
+            @if (ViewData["MENSAJEMARCA"] != null)
+            {
+                <div class="alert alert-danger" role="alert">
+                    @ViewData["MENSAJEMARCA"]
+                </div>
+            }
+
+            <button type="submit" class="btn btn-primary ml-4" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-sync-alt" aria-hidden="true"></i>
+            </button>
+            <a class="btn btn-warning ml-4" href="@Url.Action("Marca","Marca")" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-arrow-left" aria-hidden="true"></i>
+            </a>
+
+
+        </form>
 
 
     </div>
-</div>
+</body>
+</html>
 
