--- a/Views/Marca/registrarmarca.cshtml
+++ b/Views/Marca/registrarmarca.cshtml
@@ -5,41 +5,69 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:30px">
-    <div class="col-sm-12 text-center">
-        <!-- Agregué la clase text-center -->
-        <div class="panel panel-warning" style="display: inline-block;">
-            <!-- Agregué display: inline-block -->
-            <div class="panel-heading">
-                <h4>NUEVA MARCA</h4><br />
-            </div>
-            <div class="panel-body">
-                <form action="@Url.Action("registrarmarca","Marca")" method="post">
-                    <div class="form-group">
-                        <label style="font-weight: bold;">Marca</label>
-                        <input type="text" class="form-control" name="DECRIPCION_MARCA" required />
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    </div>
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-                    @if (ViewData["MENSAJEMARCA"] != null)
-                    {
-                        <div class="alert alert-danger" role="alert">
-                            @ViewData["MENSAJEMARCA"]
-                        </div>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>
+
+<body>
+
+    <h3 class="text-center mt-3 justify">Registrar marca</h3>
+
+    <div class="container mt-3 d-flex justify-content-center col-sm-12">
+        <form action="@Url.Action("registrarmarca","Marca")" method="post">
+
+
+              <div class="form-row">
+      <div class="form-group col-md-12">
+          <label>Marca</label>
+          <input type="text" class="form-control"  name="DECRIPCION_MARCA" required placeholder="Marca"><br />
+      </div>
+  </div>
+
+
+            <style>
+                .center-input {
+                    text-align: left; /* Centra el contenido en línea */
+                    margin-top: 20px; /* Espacio superior opcional */
+                }
+
+                    .center-input input {
+                        display: inline-block; /* Permite centrar el input dentro del contenedor */
                     }
+            </style>
 
-                    <button type="submit" class="btn btn-primary">Registrar</button>
-                    <a class="btn btn-warning" href="@Url.Action("Marca","Marca")">Volver</a>
-
-                </form>
+            <style>
 
 
-            </div>
-        </div>
+                .form-group label {
+                    display: block; /* Asegura que el label ocupe una línea completa */
+                    margin-bottom: 10px; /* Espacio entre el label y el DropDownList */
+                }
+            </style>
+
+  
+            <button type="submit" class="btn btn-primary ml-2" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-check" aria-hidden="true"></i>
+            </button>
+            <a class="btn btn-warning ml-2" href="@Url.Action("Marca","Marca")" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-arrow-left" aria-hidden="true"></i>
+            </a>
+        </form>
 
 
     </div>
-</div>
-
+</body>
+</html>
 
 
