--- a/Views/Proveedor/registrarproveedor.cshtml
+++ b/Views/Proveedor/registrarproveedor.cshtml
@@ -5,50 +5,70 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:30px">
-    <div class="col-sm-12 text-center">
-        <!-- Agregué la clase text-center -->
-        <div class="panel panel-warning" style="display: inline-block;">
-            <!-- Agregué display: inline-block -->
-            <div class="panel-heading">
-                <h4>NUEVO PROVEEDOR</h4><br />
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>
+
+<body>
+
+    <h3 class="text-center mt-4 justify">Registrar proveedor</h3>
+    <br />
+
+    <div class="container mt-3 d-flex justify-content-center col-sm-12">
+        <form action="@Url.Action("registrarproveedor","Proveedor")" method="post">
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>RTN</label>
+                    <input type="number" class="form-control" name="RTN" required /><br />
+                </div>
             </div>
-            <div class="panel-body">
-                <form action="@Url.Action("registrarproveedor","Proveedor")" method="post">
-                    <div class="form-group">
-                        <div class="form-label">
 
-                            <label>RTN</label>
-
-                            <input type="text" class="form-control" name="RTN" required /><br />
-
-                            <label>Nombre proveedor</label>
-
-                            <input type="text" class="form-control" name="NOMBRE_PROVEEDOR" required><br />
-
-                            <label>Correo electronico</label>
-
-                            <input type="text" class="form-control" name="CORREO_ELECTRONICO" required /><br />
-                        </div>
-                    </div>
-                    @if (ViewData["MENSAJEPROVEEDOR"] != null)
-                    {
-                        <div class="alert alert-danger" role="alert">
-                            @ViewData["MENSAJEPROVEEDOR"]
-                        </div>
-                    }
-
-                    <button type="submit" class="btn btn-primary">Registrar</button>
-                    <a class="btn btn-warning" href="@Url.Action("Proveedor","Proveedor")">Volver</a>
-
-                </form>
-
-
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Nombre proveedor</label>
+                    <input type="text" class="form-control" name="NOMBRE_PROVEEDOR" required><br />
+                </div>
             </div>
-        </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Correo electrónico</label>
+
+                    <input type="email" class="form-control" name="CORREO_ELECTRONICO" required /><br />
+                </div>
+            </div>
+
+            @if (ViewData["MENSAJEPROVEEDOR"] != null)
+            {
+                <div class="alert alert-danger" role="alert">
+                    @ViewData["MENSAJEPROVEEDOR"]
+                </div>
+            }
+
+            <button type="submit" class="btn btn-primary ml-2" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-check" aria-hidden="true"></i>
+            </button>
+            <a class="btn btn-warning ml-2" href="@Url.Action("Proveedor","Proveedor")" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-arrow-left" aria-hidden="true"></i>
+            </a>
+
+        </form>
 
 
     </div>
-</div>
+</body>
+</html>
 
 
