--- a/Views/Rol/Editarrol.cshtml
+++ b/Views/Rol/Editarrol.cshtml
@@ -5,57 +5,55 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:30px">
-    <div class="col-sm-12 text-center">
-        <!-- Agregué la clase text-center -->
-        <div class="panel panel-warning" style="display: inline-block;">
-            <!-- Agregué display: inline-block -->
-            <div class="panel-heading">
-                <h4>ACTUALIZAR ROL</h4><br />
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>
+
+<body>
+
+    <h3 class="text-center mt-4 justify">Actualizar rol</h3>
+    <br />
+
+    <div class="container mt-3 d-flex justify-content-center col-sm-12">
+        <form action="@Url.Action("Editarrol","Rol")" method="post">
+
+            <input type="hidden" class="form-control" name="ID_ROL" value="@Html.DisplayTextFor(m=>m.ID_ROL)" />
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Rol</label>
+                    <input type="text" class="form-control" name="DECRIPCION_ROL" value="@Html.DisplayTextFor(m=>m.DECRIPCION_ROL)" /><br />
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                </div>
             </div>
-            <div class="panel-body">
-                <form action="@Url.Action("Editarrol","Rol")" method="post">
-
-                    <div class="form-group">
-                        <label style="font-weight: bold; font-size: 1.2em;">Rol</label>
-
-                        <input type="hidden" class="form-control" name="ID_ROL" value="@Html.DisplayTextFor(m=>m.ID_ROL)" />
 
 
-                        <style>
-                            .center-input {
-                                text-align: center; /* Centra el contenido en línea */
-                                margin-top: 20px; /* Espacio superior opcional */
-                            }
+            @if (ViewData["MENSAJEROL"] != null)
+            {
+                <div class="alert alert-danger" role="alert">
+                    @ViewData["MENSAJEROL"]
+                </div>
+            }
+            <button type="submit" class="btn btn-primary ml-4" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-sync-alt" aria-hidden="true"></i>
+            </button>
+            <a class="btn btn-warning ml-4" href="@Url.Action("Rol","Rol")" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-arrow-left" aria-hidden="true"></i>
+            </a>
 
-                                .center-input input {
-                                    display: inline-block; /* Permite centrar el input dentro del contenedor */
-                                }
-                        </style>
-
-
-
-                        <div class="form-container">
-                            <div class="center-input">
-                         
-                                    <input type="text" class="form-control" name="DECRIPCION_ROL" value="@Html.DisplayTextFor(m=>m.DECRIPCION_ROL)" /><br />
-                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                </div>
-                                </div>
-                         </div>
-                       
-                                @if (ViewData["MENSAJEROL"] != null)
-                                {
-                                    <div class="alert alert-danger" role="alert">
-                                        @ViewData["MENSAJEROL"]
-                                    </div>
-                                }
-                                <button type="submit" class="btn btn-primary">Actualizar</button>
-                                <a class="btn btn-warning" href="@Url.Action("Rol","Rol")">Volver</a>
-
-</form>         
-            </div>
-        </div>
+        </form>
     </div>
-</div>
-
+    <
+ </body>
+</html>
