--- a/Views/Rol/registrarrol.cshtml
+++ b/Views/Rol/registrarrol.cshtml
@@ -5,39 +5,55 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container">
-    <div class="row" style="margin-top:30px">
-        <div class="col-sm-12 text-center">
-            <!-- Agregué la clase text-center -->
-            <div class="panel panel-warning" style="display: inline-block;">
-                <!-- Agregué display: inline-block -->
-                <div class="panel-heading">
-                    <h4>Nuevo rol</h4><br />
-                </div>
-                <div class="panel-body">
-                    <form action="@Url.Action("registrarrol","Rol")" method="post">
-                        <div class="form-group">
-                            <label style="font-weight: bold; font-size: 1.2em;"> Rol</label>
-                            <input type="text" class="form-control" name="DECRIPCION_ROL" /><br />
-                        </div>
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-                        @if (ViewData["MENSAJEROL"] != null)
-                        {
-                            <div class="alert alert-danger" role="alert">
-                                @ViewData["MENSAJEROL"]
-                            </div>
-                        }
-                        <button type="submit" class="btn btn-primary">Registrar</button>
-                        <a class="btn btn-warning" href="@Url.Action("Rol","Rol")">Volver</a>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-                    </form>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>
 
+<body>
+
+    <h3 class="text-center mt-4 justify">Registrar rol</h3>
+    <br />
+
+    <div class="container mt-3 d-flex justify-content-center col-sm-12">
+        <form action="@Url.Action("registrarrol","Rol")" method="post">
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Rol</label>
+                    <input type="text" class="form-control" name="DECRIPCION_ROL" required" placeholder="Rol"><br />
                 </div>
             </div>
 
+            @if (ViewData["MENSAJEROL"] != null)
+            {
+                <div class="alert alert-danger" role="alert">
+                    @ViewData["MENSAJEROL"]
+                </div>
+            }
+            <button type="submit" class="btn btn-primary ml-2" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-check" aria-hidden="true"></i>
+            </button>
+            <a class="btn btn-warning ml-2" href="@Url.Action("ROL","ROL")" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-arrow-left" aria-hidden="true"></i>
+            </a>
 
-        </div>
+
+        </form>
+
+
     </div>
+</body>
+</html>
 
-</div>
+
