--- a/Views/Serie_herramienta/Editarserieher.cshtml
+++ b/Views/Serie_herramienta/Editarserieher.cshtml
@@ -5,64 +5,162 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:25px">
-    <div class="col-sm-12 text-center">
-        <!-- Agregué la clase text-center -->
-        <div class="panel panel-warning" style="display: inline-block;">
-            <!-- Agregué display: inline-block -->
-            <div class="panel-heading">
-                <h4>ACTUALIZAR SERIE HERRAMIENTA</h4>
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>
+
+<body>
+
+    <h3 class="text-center mt-3 justify">Actualizar serie de la herramienta</h3>
+
+    <div class="container mt-3 d-flex justify-content-center col-sm-12">
+        <form action="@Url.Action("Editarserieher","Serie_herramienta")" method="post">
+
+            <input type="hidden" class="form-control" name="ID_REGISTRO_SERIE_HERRAMIENTA" value="@Html.DisplayTextFor(m=>m.ID_REGISTRO_SERIE_HERRAMIENTA)" /><br />
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label for="ID_SUCURSAL">Sucursal</label>
+                    <select class="form-control" name="ID_SUCURSAL" id="ID_SUCURSAL_P" required>
+                        <option value="">Seleccione una sucursal</option>
+                        @foreach (var itemr in ViewBag.Sucursal)
+                        {
+                            <option value="@itemr.Value" @(itemr.Value.Equals(Model.ID_SUCURSAL.ToString()) ? "selected" : "")>@itemr.Text</option>
+                        }
+                    </select>
+                </div>
             </div>
-            <div class="panel-body">
-                <form action="@Url.Action("Editarserieher","Serie_herramienta")" method="post">
+            <br />
 
-                    <input type="hidden" class="form-control" name="ID_REGISTRAR_SERIE_HERRAMIENTA" /><br />
-
-                    <div class="form-group">
-                        <label for="ID_SUCURSAL">Sucursal</label>
-                        @Html.DropDownListFor(model => model.ID_SUCURSAL, (SelectList)ViewBag.Sucursaly, new { @class = "form-control" })<br />
-                    </div>
-                    <div class="form-group">
-                        <label for="ID_HERRAMIENTA">Herramienta</label>
-                        @Html.DropDownListFor(model => model.ID_HERRAMIENTA, (SelectList)ViewBag.Herramientay, new { @class = "form-control" })<br />
-                    </div>
-                    <div class="form-group">
-                        <label>Ubicación Física</label>
-                        <input type="text" class="form-control" name="UBICACION_FISICA" required value="@Html.DisplayTextFor(m=>m.UBICACION_FISICA)" /><br />
-                    </div>
-                    <div class="form-group">
-                        <label>Número de Serie</label>
-                        <input type="text" class="form-control" name="NUMERO_SERIE" required value="@Html.DisplayTextFor(m=>m.NUMERO_SERIE)" /><br />
-                    </div>
-                    <div class="form-group">
-                        <label>Precio</label>
-                        <input type="text" class="form-control" name="PRECIO" value="@Html.DisplayTextFor(m=>m.PRECIO)" /><br />
-                    </div>
-
-                    <div class="form-group">
-                        <label for="ID_FACTURA">Estado herramienta</label>
-                        @Html.DropDownListFor(model => model.ID_ESTADO_HERRAMIENTA, (SelectList)ViewBag.Estado_herramientay, new { @class = "form-control" })<br />
-                    </div>
-
-                    <div class="form-group">
-                        <label for="ID_FACTURA">Factura</label>
-                        @Html.DropDownListFor(model => model.ID_FACTURA, (SelectList)ViewBag.Facturay, new { @class = "form-control" })<br />
-                    </div>
-
-                    <div class="form-group">
-                        <label>Comentario</label>
-                        <input type="text" class="form-control" name="COMENTARIO" value="@Html.DisplayTextFor(m=>m.COMENTARIO)" /><br />
-                    </div>
-
-                    <button type="submit" class="btn btn-primary">Actualizar</button>
-                    <a class="btn btn-warning" href="@Url.Action("serie","Serie_herramienta")">Volver</a>
-
-                </form>
-
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Modelo</label>
+                    <select class="form-control" name="ID_HERRAMIENTA" id="ID_HERRAMIENTA_B" required>
+                        <option value="">Seleccione un modelo de herramienta</option>
+                        @foreach (var itemb in ViewBag.Herramienta)
+                        {
+                            <option value="@itemb.Value" @(itemb.Value.Equals(Model.ID_HERRAMIENTA.ToString()) ? "selected" : "")>@itemb.Text</option>
+                        }
+                    </select>
+                </div>
             </div>
-        </div>
+            <br />
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Ubicación Física</label><br />
+                    <input type="text" class="form-control" name="UBICACION_FISICA" required value="@Html.DisplayTextFor(m=>m.UBICACION_FISICA)" /><br />
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Número de Serie</label>
+                    <input type="text" class="form-control" name="NUMERO_SERIE" required value="@Html.DisplayTextFor(m=>m.NUMERO_SERIE)" /><br />
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Precio</label>
+                    <input type="text" class="form-control" name="PRECIO" value="@Html.DisplayTextFor(m=>m.PRECIO)" /><br />
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Estado herramienta</label>
+                    <select class="form-control" name="ID_ESTADO_HERRAMIENTA" id="ID_ESTADO_HERRAMIENTA" required>
+                        <option value="">Seleccione un estado herramienta</option>
+                        @foreach (var itemk in ViewBag.Estado_herramienta)
+                        {
+                            <option value="@itemk.Value" @(itemk.Value.Equals(Model.ID_ESTADO_HERRAMIENTA.ToString()) ? "selected" : "")>@itemk.Text</option>
+                        }
+                    </select>
+                </div>
+            </div>
+            <br />
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Factura</label><br />
+                    <select class="form-control" name="ID_FACTURA" id="ID_FACTURA_S">
+                        <option value="">Seleccione una factura</option>
+                        @foreach (var iteml in ViewBag.Factura)
+                        {
+                            <option value="@iteml.Value" @(iteml.Value.Equals(Model.ID_FACTURA.ToString()) ? "selected" : "")>@iteml.Text</option>
+                        }
+                    </select>
+                </div>
+            </div>
+            <br />
+
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                    <label>Comentario</label>
+                    <textarea type="text" class="form-control" rows="5" name="COMENTARIO" value="@Html.DisplayTextFor(m=>m.COMENTARIO)"></textarea><br />
+                </div>
+            </div>
+
+            <style>
+                .center-input {
+                    text-align: left; /* Centra el contenido en línea */
+                    margin-top: 20px; /* Espacio superior opcional */
+                }
+
+                    .center-input input {
+                        display: inline-block; /* Permite centrar el input dentro del contenedor */
+                    }
+            </style>
+
+            <style>
+
+
+                .form-group label {
+                    display: block; /* Asegura que el label ocupe una línea completa */
+                    margin-bottom: 10px; /* Espacio entre el label y el DropDownList */
+                }
+            </style>
+
+            <button type="submit" class="btn btn-primary ml-4" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-sync-alt" aria-hidden="true"></i>
+            </button>
+            <a class="btn btn-warning ml-4" href="@Url.Action("serie","Serie_herramienta")" style="font-size: 20px; color: #FFFFFF;">
+                <i class="fas fa-arrow-left" aria-hidden="true"></i>
+            </a>
+
+        </form>
+
     </div>
-</div>
 
+    @section Scripts{
+
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+        <script type="text/javascript">
+
+            $(document).ready(function () {
+                $('#ID_SUCURSAL_P').select2();
+                $('#ID_HERRAMIENTA_B').select2();
+                $('#ID_FACTURA_S').select2();
+                $('#ID_ESTADO_HERRAMIENTA').select2();
+                
+            });
+
+        </script>
+    }
+</body>
+</html>
 
 
