--- a/Views/Tipo/Eliminartipo.cshtml
+++ b/Views/Tipo/Eliminartipo.cshtml
@@ -5,8 +5,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
 <div class="row" style="margin-top:30px">
+    @if (ViewBag.ErrorMessage != null)
+    {
+        <div class="alert alert-danger">
+            @ViewBag.ErrorMessage
+        </div>
+    }
     <div class="col-sm-12 text-center">
         <!-- Agregué la clase text-center -->
         <div class="panel panel-warning" style="display: inline-block;">
@@ -20,11 +27,16 @@
                 </div>
 
                 <form action="@Url.Action("Eliminartipo","Tipo")" method="post">
-                    <input type="hidden" class="form-control" name="Idtipo" value="@Html.DisplayTextFor(m => m.ID_TIPO_HERRAMIENTA)" /><br />
+                    <input type="hidden" class="form-control" name="Idtipo" value="@Html.DisplayTextFor(m => m.ID_TIPO_HERRAMIENTA)" />
 
-                    <button type="submit" class="btn btn-danger">Eliminar</button>
-                    <a class="btn btn-warning" href="@Url.Action("Tipo","Tipo")">Volver</a>
-                </form>
+
+                    <button type="submit" class="btn btn-danger" style="font-size: 20px; color: #FFFFFF;">
+                        <i class="fas fa-trash-alt" aria-hidden="true"></i>
+                    </button>
+                    <a class="btn btn-warning" href="@Url.Action("Tipo","Tipo")" style="font-size: 20px; color: #FFFFFF;">
+                        <i class="fas fa-arrow-left" aria-hidden="true"></i>
+                    </a>
+                    </form>
 
             </div>
         </div>
