--- a/Views/Tipo/registrartipo.cshtml
+++ b/Views/Tipo/registrartipo.cshtml
@@ -5,70 +5,54 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:30px">
-    <div class="col-sm-12 text-center">
-        <!-- Agregué la clase text-center -->
-        <div class="panel panel-warning" style="display: inline-block;">
-            <!-- Agregué display: inline-block -->
-            <div class="panel-heading">
-                <h4>NUEVO TIPO HERRAMIENTA</h4>
-            </div>
-            <div class="panel-body">
-                <form action="@Url.Action("registrartipo","Tipo")" method="post">
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    </head>
+
+    <body>
+
+        <h3 class="text-center mt-4 justify">Registrar tipo herrmienta</h3>
+        <br />
+
+        <div class="container mt-3 d-flex justify-content-center col-sm-12">
+            <form action="@Url.Action("registrartipo","Tipo")" method="post">
 
 
-                    <div class="center-input">
-                        <div class="form-group">
-                            <label style="font-weight: bold; font-size: 1.2em;">Tipo herramienta</label>
-                            <input type="text" class="form-control" name="DECRIPCION_TIPO_HERRAMIENTA" required /><br />
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        </div>
-                        </div>
+                <div class="form-row">
+                    <div class="form-group col-md-12">
+                        <label>Tipo herramienta</label>
+                        <input type="text" class="form-control" name="DECRIPCION_TIPO_HERRAMIENTA" required /><br />
+                    </div>
+                </div>
 
-                        <style>
-                            .center-input {
-                                text-align: center; /* Centra el contenido en línea */
-                                margin-top: 20px; /* Espacio superior opcional */
-                            }
+                @if (ViewData["MENSAJETIPO"] != null)
+                {
+                    <div class="alert alert-danger" role="alert">
+                        @ViewData["MENSAJETIPO"]
+                    </div>
+                }
 
-                                .center-input input {
-                                    display: inline-block; /* Permite centrar el input dentro del contenedor */
-                                }
-                        </style>
-
-
-                        <style>
-                            .form-container {
-                                text-align: center; /* Centra el contenido en línea */
-                                margin: 50px; /* Espacio opcional alrededor del contenedor */
-                            }
+                <button type="submit" class="btn btn-primary ml-2" style="font-size: 20px; color: #FFFFFF;">
+                    <i class="fas fa-check" aria-hidden="true"></i>
+                </button>
+                <a class="btn btn-warning ml-2" href="@Url.Action("Tipo","Tipo")" style="font-size: 20px; color: #FFFFFF;">
+                    <i class="fas fa-arrow-left" aria-hidden="true"></i>
+                </a>
+            </form>
 
 
-                            .form-group label {
-                                display: block; /* Asegura que el label ocupe una línea completa */
-                                margin-bottom: 10px; /* Espacio entre el label y el DropDownList */
-                            }
-                        </style>
-
-                        @if (ViewData["MENSAJETIPO"] != null)
-                        {
-                            <div class="alert alert-danger" role="alert">
-                                @ViewData["MENSAJETIPO"]
-                            </div>
-                        }
-
-                        <button type="submit" class="btn btn-primary">Registrar</button>
-                        <a class="btn btn-warning" href="@Url.Action("Tipo","Tipo")">Volver</a>
-
-</form>
-
-
-            </div>
         </div>
-
-
-    </div>
-</div>
-
+    </body>
+</html>
 
 
